# CyberTrace

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cybertrace/: __init__.py  __main__.py  cli.py  config.py  detector.py  output.py
cybertrace/modules/: __init__.py  base.py  bitcoin_module.py  darkweb_module.py  domain_module.py  email_module.py  indian_module.py  username_module.py
cybertrace/utils/: __init__.py
docs/: TECHNICAL_DOCUMENTATION.md
tests/: __init__.py  test_detector.py  test_modules.py
