[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybertrace"
version = "1.0.0"
description = "Multi-Layer OSINT Investigation Tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anubhav Mohandas"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "dnspython>=2.2.0",
    "python-whois>=0.8.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
tor = ["PySocks>=1.7.0", "stem>=1.8.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
cybertrace = "cybertrace.cli:main"

[project.urls]
Homepage = "https://github.com/anubhavmohandas/cybertrace"
Repository = "https://github.com/anubhavmohandas/cybertrace"

[tool.setuptools.packages.find]
where = ["."]
include = ["cybertrace*"]
